# Roaudter-agent

./: .gitignore  DEV_LOGS.md  INTERACTION_PROTOCOL.md  LICENSE  README.md  ROADMAP.md  SUBTREE_ROUTING_AWARENESS_PROTOCOL.md  SYSTEM_STATE.md  SYSTEM_STATE_CONTRACT.md  TEST_MIRROR_MATRIX_2026-02-17.md  WB01_ROAUDTER_DEEP_ANALYSIS_AND_STRATEGY_2026-02-17.md  WORKFLOW_SNAPSHOT_CONTRACT.md  WORKFLOW_SNAPSHOT_STATE.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scripts/: dev.sh  pt.sh  rt.sh  test_entrypoint.sh
src/roaudter_agent/: __init__.py  contracts.py  core.py  health.py  lam_entrypoint.py  policy.py  registry.py  router.py
src/roaudter_agent/providers/: base.py  claude.py  deepseek.py  gemini.py  grok.py  ollama.py  openai.py
tests/: conftest.py  test_claude_missing_key_fallback.py  test_cloud_quota_fallback.py  test_context_roundtrip.py  test_deepseek_missing_key_fallback.py  test_dry_run.py  test_envelope_metrics_v1.py  test_gemini_missing_key_fallback.py  test_grok_missing_key_fallback.py  test_health_cooldown.py  test_health_ttl.py  test_lam_entrypoint_contract.py  test_lam_entrypoint_metrics_passthrough.py  test_ollama_healthcheck.py  test_openai_missing_key_fallback.py  test_provider_hint_profiles.py  test_registry_smoke.py  test_router_fallback.py
